--- a/src/app/admin/tables/edi-docs/edi-docs.component.html
+++ b/src/app/admin/tables/edi-docs/edi-docs.component.html
@@ -42,7 +42,7 @@
 
 
     <p-dialog header="Edi Docs Details" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true"
-        showEffect="fade" [modal]="true" [style]="{width: '300px'}">
+        showEffect="fade" [modal]="true" [style]="{width: '300px'}" [autoZIndex]="false">
         <div class="ui-g ui-fluid" *ngIf="ediDocs">
             <div class="ui-g-12">
                 <div class="ui-g-4">
