--- a/src/app/admin/tables/erp/erp.component.html
+++ b/src/app/admin/tables/erp/erp.component.html
@@ -42,7 +42,7 @@
 
 
     <p-dialog header="ERP Details" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true"
-        showEffect="fade" [modal]="true" [style]="{width: '400px'}">
+        showEffect="fade" [modal]="true" [style]="{width: '400px'}" [autoZIndex]="false">
         <div class="ui-g ui-fluid" *ngIf="erp">
             <div class="ui-g-12 p-0">
                 <label class="font-weight-bold">Name</label>
