--- a/src/app/admin/tables/drop-ship-volume-plan/drop-ship-volume-plan.component.html
+++ b/src/app/admin/tables/drop-ship-volume-plan/drop-ship-volume-plan.component.html
@@ -42,7 +42,7 @@
 
 
     <p-dialog header="Plan Details" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true"
-        showEffect="fade" [modal]="true" [style]="{width: '600px'}">
+        showEffect="fade" [modal]="true" [style]="{width: '600px'}" [autoZIndex]="false">
         <div class="ui-g ui-fluid" *ngIf="plan">
             <div class="ui-g-12 p-1">
                 <div class="ui-g-8">
