--- a/src/app/admin/tables/pm-fees/pm-fees.component.html
+++ b/src/app/admin/tables/pm-fees/pm-fees.component.html
@@ -40,7 +40,7 @@
         </div>
     </div>
     <p-dialog header="PM Fee Details" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true"
-        showEffect="fade" [modal]="true" [style]="{width: '600px'}">
+        showEffect="fade" [modal]="true" [style]="{width: '600px'}" [autoZIndex]="false">
         <div class="ui-g ui-fluid" *ngIf="plan">
             <div class="ui-g-12 p-0">
                 <div class="ui-g-6">
