--- a/src/app/home/userDialog.html
+++ b/src/app/home/userDialog.html
@@ -17,7 +17,8 @@
             <div class="input-group-prepend">
                 <span class="input-group-text"><i class="fa fa-envelope"></i></span>
             </div>
-            <input type="text" formControlName="email" class="form-control" placeholder="Email Address (test@dicentral.com)" required>
+            <input type="text" formControlName="email" class="form-control"
+                placeholder="Email Address (test@dicentral.com)" required>
         </div>
         <div *ngIf="form.controls['email'].invalid && (form.controls['email'].dirty || form.controls['email'].touched)"
             class="alert alert-danger">
@@ -44,7 +45,8 @@
             <div class="input-group-prepend">
                 <span class="input-group-text"><i class="fa fa-user-circle-o"></i></span>
             </div>
-            <input type="text" formControlName="customerName" class="form-control" placeholder="Enter the Customer Name" required>
+            <input type="text" formControlName="customerName" class="form-control" placeholder="Enter the Customer Name"
+                required>
         </div>
         <div *ngIf="form.controls['customerName'].invalid && (form.controls['customerName'].dirty || form.controls['customerName'].touched)"
             class="alert alert-danger">
@@ -57,14 +59,8 @@
                 <span class="input-group-text"><i class="fa fa-money"></i></span>
             </div>
             <select formControlName="currency" class="form-control">
-                <option selected value="USD"> USD</option>
-                <option value="JPY"> JPY</option>
-                <option value="CAD"> CAD</option>
-                <option value="AUD"> AUD</option>
-                <option value="EUR"> EUR</option>
-                <option value="GBP"> GBP</option>
-                <option value="INR"> INR</option>
-                <option value="VND"> VND</option>
+                <option *ngFor="let item of data.currencyData" value="{{item.Currency}}"> {{item.Currency}}</option>
+
             </select>
         </div>
         <div class="form-group text-center">
